Make it possible to click on a particular red colored nucleotide in the input sequence in order to assign a new nucleotide

--- a/style.css
+++ b/style.css
@@ -192,6 +192,10 @@ legend {
     font-family: monospace, monospace;
     background-color: yellow;
 }
+.bggreen {
+    font-family: monospace, monospace;
+    background-color: green;
+}
 .plot {
     border: 1px solid black;
 }
